--- a/package.json
+++ b/package.json
@@ -42,5 +42,14 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "prettier": {
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "singleQuote": true,
+    "semi": true,
+    "useTabs": true,
+    "bracketSpacing": true,
+    "arrowParens": "avoid"
   }
 }
