add node and uWSjs

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "node": "^15.12.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uwebsockets.js": "^19.0.0-docs",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
