--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "server": "node src/server/server.js",
+    "hot-server": "nodemon src/server/server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,10 +23,13 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "express": "^4.17.1",
     "node": "^15.12.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "uwebsockets.js": "^19.0.0-docs",
+    "uuid": "^8.3.2",
+    "uuid-readable": "^0.0.2",
+    "ws": "^7.4.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -35,6 +40,8 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
+    "@types/uuid-readable": "^0.0.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -56,5 +63,9 @@
     "useTabs": true,
     "bracketSpacing": true,
     "arrowParens": "avoid"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.3",
+    "utf-8-validate": "^5.0.4"
   }
 }
