add tonejs and stuff to library

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "node": "^15.12.0",
     "rxjs": "~6.6.0",
+    "tone": "^14.7.77",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
     "uuid-readable": "^0.0.2",
