--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-duet",
   "version": "0.0.0",
+  "author": "Josh Leslie",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +10,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod && gcloud app deploy"
+  },
+  "engines": {
+    "node": "14.x.x"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +28,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "node": "^15.12.0",
     "rxjs": "~6.6.0",
