--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,25 @@
-runtime: nodejs14
+runtime: custom
+env: flex
 
 handlers:
 - url: /
-  static_files: dist/web-duet/index.html
-  upload: dist/web-duet/index.html
+  static_dir: build
 - url: /
-  static_dir: dist/web-duet
+  static_files: build/index.html
+  upload: build/index.html
+- url: /.*
+  static_files: build/index.html
+  upload: build/index.html
+
+# This sample incurs costs to run on the App Engine flexible environment.
+# The settings below are to reduce costs during testing and are not appropriate
+# for production use. For more information, see:
+# https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
+network:
+  session_affinity: true
