--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "server": "node src/server/server.js",
-		"prod:docker": "node server.js",
-    "hot-server": "nodemon src/server/server.js",
+    "server": "node src/server/main.js",
+    "prod:docker": "node ./server/main.js",
+    "hot-server": "nodemon src/server/main.js",
     "build": "ng build",
     "build:prod": "ng build --prod",
-		"build:prod:docker": "ng build --prod --output-path ./build",
+    "build:prod:docker": "ng build --prod --output-path ./build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -43,7 +43,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular-devkit/build-angular": "^0.1102.12",
+    "@angular-eslint/builder": "4.2.0",
+    "@angular-eslint/eslint-plugin": "4.2.0",
+    "@angular-eslint/eslint-plugin-template": "4.2.0",
+    "@angular-eslint/schematics": "4.2.0",
+    "@angular-eslint/template-parser": "4.2.0",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
     "@schematics/angular": "^10.1.7",
@@ -52,7 +57,13 @@
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.0",
     "@types/uuid-readable": "^0.0.1",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
+    "eslint": "^7.6.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
@@ -62,7 +73,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.0.2"
   },
   "prettier": {
