--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-duet",
   "version": "0.0.0",
   "author": "Josh Leslie",
+	"homepage": "/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
