--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
 			"extends": ["standard"],
 			"rules": {
 				"semi": ["error", "always"],
-				"indent": ["error", "tab"]
+				"indent": ["error", "space"]
 			}
 		},
 		{
