--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-duet",
   "version": "0.0.0",
   "author": "Josh Leslie",
-	"homepage": "/",
+  "homepage": "/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,7 +16,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "ng build --prod && gcloud app deploy",
-		"docker:test": "docker run -p 8080:8080 webduet"
+    "docker:test": "docker run -p 8080:8080 webduet"
   },
   "engines": {
     "node": "14.x.x"
@@ -36,6 +36,7 @@
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "node": "^15.12.0",
+    "peerjs": "^1.3.2",
     "rxjs": "~6.6.0",
     "tone": "^14.7.77",
     "tslib": "^2.0.0",
