--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     ]
   },
 	"angularCompilerOptions": {
-		"strictTemplates": true
+		"strictTemplates": true,
+		"allowSynethicDefaultImports": true
 	}
 }
