refactor so go server provides build files from dist add air for hot reloading of go server refactor all the things add to FE env to move hardcoded values update p.json

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "author": "Josh Leslie",
   "homepage": "/",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "server": "go run ./server",
+    "start": "ng build --output-path dist --watch",
+    "server": "air",
     "build": "ng build",
     "build:prod": "ng build --prod",
     "build:prod:docker": "ng build --prod --output-path ./build",
